Subindo os ajustes
