# app/Http/Resources/ServidorEfetivoResource.php
@@ -10,11 +10,14 @@ class ServidorEfetivoResource extends JsonResource
     {
         return [
             'pes_id' => $this->pes_id,
+            'nome' => $this->pessoa->pes_nome,
+            'pes_cpf' => $this->pessoa->pes_cpf,
             'matricula' => $this->se_matricula,
-            'pessoa' => [
-                'nome' => $this->pessoa->pes_nome,
-                'nascimento' => $this->pessoa->pes_data_nascimento
-            ],
+            'nascimento' => $this->pessoa->pes_data_nascimento,
+            'pes_sexo' => $this->pessoa->pes_sexo,
+            'pes_mae' => $this->pessoa->pes_mae,
+            'pes_pai' => $this->pessoa->pes_pai,
+            
             'lotacoes' => $this->pessoa->lotacoes->map(function($lotacao) {
                 return [
                     'unidade' => $lotacao->unidade->unid_nome,
